--- a/admin.html
+++ b/admin.html
@@ -12,12 +12,12 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link href="css/bootstrap-theme.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap.css.map" rel="stylesheet">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/stylesheet01.css" rel="stylesheet">
+	<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
+	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+	<link href="resources/css/stylesheet01.css" rel="stylesheet">
 </head>
 
 <body style="background-color: #7F6E64">
@@ -25,7 +25,7 @@
 		<< zurück</a> <div align="center">
 			<form>
 				<button type="button">
-					<img src="./img/signin.png" />
+					<img src="./resources/img/signin.png" />
 					<br>
 					<br>
 					<span style="color: #383D3B" align="center">Anmelden</span>
@@ -35,7 +35,7 @@
 			<br>
 			<form>
 				<button type="button">
-					<img src="./img/newuser.png" />
+					<img src="./resources/img/newuser.png" />
 					<br>
 					<br>
 					<span style="color: #383D3B" align="center">Admin-User <br> hinzufügen</span>
