--- a/mohren.html
+++ b/mohren.html
@@ -13,12 +13,12 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-<link href="css/bootstrap-theme.css" rel="stylesheet">
-<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/bootstrap.css.map" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/stylesheet01.css" rel="stylesheet">
+<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
+<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="resources/css/bootstrap.css" rel="stylesheet">
+<link href="resources/css/bootstrap.css.map" rel="stylesheet">
+<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="resources/css/stylesheet01.css" rel="stylesheet">
 
 <!-- Unterstützung für Media Queries und HTML5-Elemente in IE8 über HTML5 shim und Respond.js -->
 <!-- ACHTUNG: Respond.js funktioniert nicht, wenn du die Seite über file:// aufrufst -->
@@ -35,9 +35,7 @@
 				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
 					restaurando </a> <a
 					class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-					<img
-					src="./bsrestaurant/assets/images/logo/logo.png"
-					alt="logo">
+					restaurando
 				</a>
 				<div class="w-100 text-right">
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
