--- a/restaurants.html
+++ b/restaurants.html
@@ -13,12 +13,12 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-<link href="css/bootstrap-theme.css" rel="stylesheet">
-<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/bootstrap.css.map" rel="stylesheet">
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/stylesheet01.css" rel="stylesheet">
+<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
+<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
+<link href="resources/css/bootstrap.css" rel="stylesheet">
+<link href="resources/css/bootstrap.css.map" rel="stylesheet">
+<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="resources/css/stylesheet01.css" rel="stylesheet">
 
 <!-- Unterstützung für Media Queries und HTML5-Elemente in IE8 über HTML5 shim und Respond.js -->
 <!-- ACHTUNG: Respond.js funktioniert nicht, wenn du die Seite über file:// aufrufst -->
@@ -35,7 +35,7 @@
 				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
 					restaurando </a> <a
 					class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-					<img src="./bsrestaurant/assets/images/logo/logo.png" alt="logo">
+					restaurando
 				</a>
 				<div class="w-100 text-right">
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -67,7 +67,7 @@
 		<div class="row">
 			<a href="qmuh.html">
 				<div class="card" style="width: 18rem">
-					<img class="card-img-top" src="./img/qmuh.png" alt="Card image cap">
+					<img class="card-img-top" src="./resources/img/qmuh.png" alt="Card image cap">
 					<div class="card-body" align="center">
 						<p class="card-text">QMUH Ravensburg</p>
 						<a href="qmuh.html#reserve" class="card-button">Zur
@@ -77,7 +77,7 @@
 			</a> 
 			<a href="mohren.html">
 				<div class="card" style="width: 18rem">
-					<img class="card-img-top" src="./img/mohren.jpg"
+					<img class="card-img-top" src="./resources/img/mohren.jpg"
 						alt="Card image cap">
 					<div class="card-body" align="center">
 						<p class="card-text">Wirtshaus Mohren</p>
