reservation.js deleted

--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 	</header>
 	<form action="/backend/showreservation.php" method="GET">
 		<p align="center">
-			<button class="button" href="#" role="button" id="showResBtn" type="submit">Reservierungen anzeigen</button>
+			<button class="button" href="#" role="button" id="showResBtn" type="submit" onclick="passWord()">Reservierungen anzeigen</button>
 		</p>
 	</form>
-	<input type="button" class="button" onclick="passWord()" value="Anmelden >>"/>
-	<script src="reservation.js"></script>
 	<script src="passlock.js"></script>
 </body>
 
