--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-				<ul class="navbar-nav ml-auto flex-nowrap">
+				<ul class="navbar-nav ml-auto flex-nowrap" id="navbar">
 					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
 					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="qmuh.html" class="nav-link m-2 menu-item">QMUH Test</a></li>
