--- a/restaurants.html
+++ b/restaurants.html
@@ -53,7 +53,7 @@
 						class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="qmuh.html"
 						class="nav-link m-2 menu-item">QMUH Test</a></li>
-					<li class="nav-item"><a href="#"
+					<li class="nav-item"><a href="contact.html"
 						class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 			</div>
