--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
 					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="qmuh.html" class="nav-link m-2 menu-item">QMUH Test</a></li>
-					<li class="nav-item"><a href="#" class="nav-link m-2 menu-item">Kontakt</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 			</div>
 		</nav>
