Login Button & Startseite (Patrick)

--- a/startseite.html
+++ b/startseite.html
@@ -65,31 +65,36 @@
 </header>
 
 <div class="card-group">
-    <div class="card">
+     <a href="restaurants.html" class="cardAction">
+     <div class="card" style="width: 565px; height:710px">
         <img class="card-img-top" src="resources/img/rav.jpg" alt="Ravensburg">
         <div class="card-body">
-            <h5 class="card-title">Ravensburg</h5>
-            <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</p>
+            <h3 class="card-title">Ravensburg</h3>
+            <p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</small></p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
-    </div>
-    <div class="card">
+     </div>
+    </a>
+    <a href="restaurants.html" class="cardAction">
+      <div class="card" style="width: 565px; height:710px">
         <img class="card-img-top" src="resources/img/fn.jpg" alt="Friedrichshafen">
         <div class="card-body">
-            <h5 class="card-title">Friedrichsahfen</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h3 class="card-title">Friedrichsahfen</h3>
+            <p class="card-text"><small> This card has supporting text below as a natural lead-in to additional content.</small></p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
-    <div class="card">
+    </a>
+    <a href="" class="cardAction">
+    <div class="card" style="width: 565px; height:710px">
         <img class="card-img-top" src="resources/img/ulm2.jpg" alt="Ulm">
         <div class="card-body">
-            <h5 class="card-title">Ulm</h5>
-            <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.This card has even longer content than the first to show that equal height action.</p>
+            <h3 class="card-title">Ulm</h3>
+            <p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.This card has even longer content than the first to show that equal height action.</small></p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
+    </a>
 </div>
-
 </body>
 </html>
