--- a/index.html
+++ b/index.html
@@ -3,124 +3,162 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
-    <title>restaurando</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
+	<title>restaurando</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="resources/css/bootstrap-theme.css" rel="stylesheet">
-    <link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css.map" rel="stylesheet">
-    <link href="resources/css/bootstrap.min.css" rel="stylesheet">
-    <link href="resources/css/stylesheet01.css" rel="stylesheet">
-    <link href="/resto/login/loginStyle.css" rel="stylesheet">
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
+	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+	<link href="resources/css/stylesheet01.css" rel="stylesheet">
+	<link href="/resto/login/loginStyle.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body style="background-color: #7F6E64">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="d-flex flex-grow-1">
-                <span class="w-100 d-lg-none d-block">
-                    <!-- hidden spacer to center brand on mobile -->
-                </span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-                    restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-                    restaurando
-                </a>
-                <div class="w-100 text-right">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-            </div>
-            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-                <ul class="navbar-nav ml-auto flex-nowrap">
-                    <li class="nav-item"><a href="#" class="nav-link m-2 menu-item nav-active">Home</a></li>
-                    <li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="d-flex flex-grow-1">
+				<span class="w-100 d-lg-none d-block">
+					<!-- hidden spacer to center brand on mobile -->
+				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
+					restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
+					restaurando
+				</a>
+				<div class="w-100 text-right">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				</div>
+			</div>
+			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+				<ul class="navbar-nav ml-auto flex-nowrap">
+					<li class="nav-item"><a href="#" class="nav-link m-2 menu-item nav-active">Home</a></li>
+					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-                        <button onclick="document.getElementById('id01').style.display='block'"
-							style="width:auto;"><img src="/resources/img/login.png">   Login</button>
-						
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        
-        <div id="id01" class="modal">
-            <form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
-                <div class="imgcontainer">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                        title="Close Modal">&times;</span>
-                    <img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
-                </div>
+						<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><img
+								src="/resources/img/login.png"> Login</button>
 
-                <div class="container">
-                    <label for="usernameinput"><b>Benutzername</b></label>
-                    <input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50" required>
-                    <br>
-                    <label for="passwordinput"><b>Passwort</b></label>
-                    <input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
-                    <br>
-                    <button type="submit">Login</button>
-                </div>
-            </form>
-        </div>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-        <div class="jumbotron text-center" id="jumbotronStartseite">
-            <div id="titletext">
-                <h1>Herzlich Willkommen</h1>
-                <p>Reservieren Sie jetzt Ihr Lieblingsrestaurant in Ihrem Ort</p>
-            </div>
-            <p>
-                <a class="button" href="restaurants.html" role="button" id="button01">Zu den
-                    Restaurants >></a>
-            </p>
-        </div>
-    </header>
+		<div id="id01" class="modal">
+			<form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
+				<div class="imgcontainer">
+					<span onclick="document.getElementById('id01').style.display='none'" class="close"
+						title="Close Modal">&times;</span>
+					<img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
+				</div>
 
-    <div class="card-group">
-        <a href="restaurants.html" class="cardAction">
-            <div class="card" style="width: 565px; height:710px">
-                <img class="card-img-top" src="resources/img/rav.jpg" alt="Ravensburg">
-                <div class="card-body">
-                    <h3 class="card-title">Ravensburg</h3>
-                    <p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra
-                            content. This content is a little longer.</small></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </a>
-        <a href="restaurants.html" class="cardAction">
-            <div class="card" style="width: 565px; height:710px">
-                <img class="card-img-top" src="resources/img/fn.jpg" alt="Friedrichshafen">
-                <div class="card-body">
-                    <h3 class="card-title">Friedrichsahfen</h3>
-                    <p class="card-text"><small> This card has supporting text below as a natural lead-in to additional
-                            content.</small></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </a>
-        <a href="" class="cardAction">
-            <div class="card" style="width: 565px; height:710px">
-                <img class="card-img-top" src="resources/img/ulm2.jpg" alt="Ulm">
-                <div class="card-body">
-                    <h3 class="card-title">Ulm</h3>
-                    <p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra
-                            content. This content is a little longer.This card has even longer content than the first to
-                            show that equal height action.</small></p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </a>
-    </div>
+				<div class="container">
+					<label for="usernameinput"><b>Benutzername</b></label>
+					<input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50"
+						required>
+					<br>
+					<label for="passwordinput"><b>Passwort</b></label>
+					<input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
+					<br>
+					<button type="submit">Login</button>
+				</div>
+			</form>
+		</div>
+
+		<div class="jumbotron text-center" id="jumbotronStartseite">
+			<div id="titletext">
+				<h1>Herzlich Willkommen</h1>
+				<p>Reservieren Sie jetzt Ihr Lieblingsrestaurant in Ihrem Ort</p>
+			</div>
+			<p>
+				<a class="button" href="restaurants.html" role="button" id="button01">Zu den
+					Restaurants >></a>
+			</p>
+		</div>
+	</header>
+
+	<div class="card-group">
+		<div class="card">
+			<a href="restaurants.html" class="cardAction">
+				<img class="card-img-top-index" src="resources/img/rav.jpg" alt="Ravensburg">
+				<div class="card-body">
+					<h3 class="card-title">Ravensburg</h3>
+					<p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra
+							content. This content is a little longer.</small></p>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</a>
+		</div>
+		<div class="card">
+			<a href="restaurants.html" class="cardAction">
+				<img class="card-img-top-index" src="resources/img/fn.jpg" alt="Friedrichshafen">
+				<div class="card-body">
+					<h3 class="card-title">Friedrichsahfen</h3>
+					<p class="card-text"><small> This card has supporting text below as a natural lead-in to additional
+							content.</small></p>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</a>
+		</div>
+
+		<div class="card">
+			<a href="restaurants.html" class="cardAction">
+				<img class="card-img-top-index" src="resources/img/ulm2.jpg" alt="Ulm">
+				<div class="card-body">
+					<h3 class="card-title">Ulm</h3>
+					<p class="card-text"><small>It's a broader card with text below as a natural lead-in to extra
+							content. This content is a little longer.This card has even longer content than the first to
+							show that equal height action.</small></p>
+					<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+				</div>
+			</a>
+		</div>
+	</div>
 </body>
+<footer class="footer-distributed">
+	<div class="footer-left">
+		<h3>
+			<span>Restaurando</span>
+		</h3>
+		<p class="footer-links">
+			<a href="index.html" class="link-1">Home</a> <a href="restaurants.html">Restaurants</a> <a
+				href="contact.html">Kontakt</a>
+		</p>
+		<p class="footer-company-name">Restaurando © 2019</p>
+	</div>
+	<div class="footer-center">
+		<div>
+			<i class="fa fa-map-marker"></i>
+			<p>
+				<span>Georgstraße 13</span> Ravensburg, Deutschland
+			</p>
+		</div>
+		<div>
+			<i class="fa fa-phone"></i>
+			<p>+49 1575 444444</p>
+		</div>
+		<div>
+			<i class="fa fa-envelope"></i>
+			<p>
+				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
+			</p>
+		</div>
+	</div>
+	<div class="footer-right">
+		<p class="footer-company-about">
+			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
+		</p>
+	</div>
+</footer>
 
 </html>
