--- a/mohren.html
+++ b/mohren.html
@@ -9,58 +9,30 @@
 <title>Wirtshaus Mohren</title>
 
 <!-- Bootstrap -->
-<link rel="stylesheet"
+	<link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
-<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
-<link href="resources/css/bootstrap.css" rel="stylesheet">
-<link href="resources/css/bootstrap.css.map" rel="stylesheet">
-<link href="resources/css/bootstrap.min.css" rel="stylesheet">
-<link href="resources/css/stylesheet01.css" rel="stylesheet">
-    <link href="/resto/login/loginStyle.css" rel="stylesheet">
-
-<!-- Unterstützung für Media Queries und HTML5-Elemente in IE8 über HTML5 shim und Respond.js -->
-<!-- ACHTUNG: Respond.js funktioniert nicht, wenn du die Seite über file:// aufrufst -->
-<!--[if lt IE 9]>
-		      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		    <![endif]-->
+	<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
+	<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css" rel="stylesheet">
+	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
+	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+	<link href="resources/css/stylesheet01.css" rel="stylesheet">
+	<link href="/resto/login/loginStyle.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="background-color: #7F6E64">
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="d-flex flex-grow-1">
-				<span class="w-100 d-lg-none d-block"> <!-- hidden spacer to center brand on mobile -->
-				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-					restaurando </a> <a
-					class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-					restaurando
-				</a>
-				<div class="w-100 text-right">
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#myNavbar">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</div>
-			</div>
-			<div class="collapse navbar-collapse flex-grow-1 text-right"
-				id="myNavbar">
-				<ul class="navbar-nav ml-auto flex-nowrap">
-					<li class="nav-item"><a href="index.html"
-						class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurants.html"
-						class="nav-link m-2 menu-item">Restaurants</a></li>
-					<li class="nav-item"><a href="#"
-						class="nav-link m-2 menu-item">QMUH Test</a></li>
-					<li class="nav-item"><a href="contact.html"
-						class="nav-link m-2 menu-item">Kontakt</a></li>
             <div class="d-flex flex-grow-1">
                 <span class="w-100 d-lg-none d-block">
                     <!-- hidden spacer to center brand on mobile -->
-                </span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-                    restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
+				</span> 
+				<a class="navbar-brand d-none d-lg-inline-block" href="index.html">
+					restaurando 
+				</a> 
+				<a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
                     restaurando
                 </a>
                 <div class="w-100 text-right">
@@ -167,4 +139,39 @@
 		</div>
 	</header>
 </body>
+<footer class="footer-distributed">
+	<div class="footer-left">
+		<h3>
+			<span>Restaurando</span>
+		</h3>
+		<p class="footer-links">
+			<a href="index.html" class="link-1">Home</a> <a href="restaurants.html">Restaurants</a> <a
+				href="contact.html">Kontakt</a>
+		</p>
+		<p class="footer-company-name">Restaurando © 2019</p>
+	</div>
+	<div class="footer-center">
+		<div>
+			<i class="fa fa-map-marker"></i>
+			<p>
+				<span>Georgstraße 13</span> Ravensburg, Deutschland
+			</p>
+		</div>
+		<div>
+			<i class="fa fa-phone"></i>
+			<p>+49 1575 444444</p>
+		</div>
+		<div>
+			<i class="fa fa-envelope"></i>
+			<p>
+				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
+			</p>
+		</div>
+	</div>
+	<div class="footer-right">
+		<p class="footer-company-about">
+			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
+		</p>
+	</div>
+</footer>
 </html>
