--- a/mohren.html
+++ b/mohren.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
-<title>Wirtshaus Mohren</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
+	<title>Gasthaus Mohren</title>
 
-<!-- Bootstrap -->
-	<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
 	<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="resources/css/bootstrap.css" rel="stylesheet">
@@ -20,65 +19,66 @@
 	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 	<link href="resources/css/stylesheet01.css" rel="stylesheet">
 	<link href="/resto/login/loginStyle.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body style="background-color: #7F6E64">
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="d-flex flex-grow-1">
-                <span class="w-100 d-lg-none d-block">
-                    <!-- hidden spacer to center brand on mobile -->
-				</span> 
-				<a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-					restaurando 
-				</a> 
-				<a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-                    restaurando
-                </a>
-                <div class="w-100 text-right">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-            </div>
-            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-                <ul class="navbar-nav ml-auto flex-nowrap">
-                    <li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
-                    <li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link m-2 menu-item">Kontakt</a></li>
+			<div class="d-flex flex-grow-1">
+				<span class="w-100 d-lg-none d-block">
+					<!-- hidden spacer to center brand on mobile -->
+				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
+					restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
+					restaurando
+				</a>
+				<div class="w-100 text-right">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				</div>
+			</div>
+			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+				<ul class="navbar-nav ml-auto flex-nowrap">
+					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
+					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
-                        <button onclick="document.getElementById('id01').style.display='block'"
-                            style="width:auto;"><img src="/resources/img/login.png">   Login</button>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        
-        <div id="id01" class="modal">
-            <form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
-                <div class="imgcontainer">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                        title="Close Modal">&times;</span>
-                    <img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
-                </div>
+						<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><img
+								src="/resources/img/login.png"> Login</button>
 
-                <div class="container">
-                    <label for="usernameinput"><b>Benutzername</b></label>
-                    <input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50" required>
-                    <br>
-                    <label for="passwordinput"><b>Passwort</b></label>
-                    <input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
-                    <br>
-                    <button type="submit">Login</button>
-                </div>
-            </form>
-        </div>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+		<div id="id01" class="modal">
+			<form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
+				<div class="imgcontainer">
+					<span onclick="document.getElementById('id01').style.display='none'" class="close"
+						title="Close Modal">&times;</span>
+					<img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
+				</div>
+
+				<div class="container">
+					<label for="usernameinput"><b>Benutzername</b></label>
+					<input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50"
+						required>
+					<br>
+					<label for="passwordinput"><b>Passwort</b></label>
+					<input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
+					<br>
+					<button type="submit">Login</button>
+				</div>
+			</form>
+		</div>
+
 		<div class="jumbotron text-center" id="jumbotronmohren">
 			<div id="titletext">
 				<h1>Wirtshaus Mohren</h1>
-				<p>Reservieren Sie Ihren Tisch bei Wirtshaus Mohren - gleich
+				<p>Reservieren Sie Ihren Tisch im Wirtshaus Mohren - gleich
 					hier!</p>
 			</div>
 			<p>
@@ -94,7 +94,9 @@
 				</div>
 				<div class="col-sm-4">
 					<h3>Was?</h3>
-					<p>Unser Restaurant in einem der ältesten Gebäude der Ravensburger Altstadt, überzeugt mit traditionellem Charme, der auf eine morderne Einrichtung trifft. Unsere Räumlichkeiten bieten sich auch optimal als Eventlocation an.</p>
+					<p>Unser Restaurant in einem der ältesten Gebäude der Ravensburger Altstadt, überzeugt mit
+						traditionellem Charme, der auf eine morderne Einrichtung trifft. Unsere Räumlichkeiten bieten
+						sich auch optimal als Eventlocation an.</p>
 				</div>
 				<div class="col-sm-4">
 					<h3>Wo?</h3>
@@ -111,19 +113,24 @@
 					<div class="col-sm-4" align="center">
 						<h3>Datum auswählen:</h3>
 						<img src="https://img.icons8.com/metro/26/000000/calendar.png">
-						<input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required name="dateinput">
+						<input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required
+							name="dateinput">
 					</div>
 					<div class="col-sm-4" align="center">
 						<h3>Uhrzeit auswählen:</h3>
 						<img src="https://img.icons8.com/metro/26/000000/clock.png">
-						<input class="reservation" type="time" id="time" min="09:00" max="23:00" required name="timeinput">
+						<input class="reservation" type="time" id="time" min="09:00" max="23:00" required
+							name="timeinput">
 					</div>
+				</div>
+				<div class="row">
 					<div class="col-sm-4" align="center">
 						<h3>Anzahl Personen auswählen:</h3>
 						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
 						<input class="reservation" type="text" id="amount" required name="amountinput">
 					</div>
 					<div class="col-sm-4" align="center">
+						<br>
 						<h3>Name:</h3>
 						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
 						<input class="reservation" type="text" id="name" required name="nameinput">
@@ -134,7 +141,6 @@
 						<button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
 							absenden</button>
 					</p>
-				</p>
 			</form>
 		</div>
 	</header>
@@ -174,4 +180,5 @@
 		</p>
 	</div>
 </footer>
+
 </html>
