Final (ohne Dropdown in Navbar)

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
 	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 	<link href="resources/css/stylesheet01.css" rel="stylesheet">
-	<link href="/resto/login/loginStyle.css" rel="stylesheet">
+	<link href="/resources/css/loginStyle.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
