--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
 	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 	<link href="resources/css/stylesheet01.css" rel="stylesheet">
-	<link href="/resto/login/loginStyle.css" rel="stylesheet">
+	<link href="/resources/css/loginStyle.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -41,7 +41,7 @@
 			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
 				<ul class="navbar-nav ml-auto flex-nowrap">
 					<li class="nav-item"><a href="#" class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
+					<li class="nav-item"><a href="restaurantsRV.html" class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -80,16 +80,12 @@
 				<h1>Herzlich Willkommen</h1>
 				<p>Reservieren Sie jetzt Ihr Lieblingsrestaurant in Ihrem Ort</p>
 			</div>
-			<p>
-				<a class="button" href="restaurants.html" role="button" id="button01">Zu den
-					Restaurants >></a>
-			</p>
 		</div>
 	</header>
 
 	<div class="card-group">
 		<div class="card">
-			<a href="restaurants.html" class="cardAction">
+			<a href="restaurantsRV.html" class="cardAction">
 				<img class="card-img-top-index" src="resources/img/rav.jpg" alt="Ravensburg">
 				<div class="card-body">
 					<h3 class="card-title">Ravensburg</h3>
@@ -100,7 +96,7 @@
 			</a>
 		</div>
 		<div class="card">
-			<a href="restaurants.html" class="cardAction">
+			<a href="restaurantsFN.html" class="cardAction">
 				<img class="card-img-top-index" src="resources/img/fn.jpg" alt="Friedrichshafen">
 				<div class="card-body">
 					<h3 class="card-title">Friedrichsahfen</h3>
@@ -112,7 +108,7 @@
 		</div>
 
 		<div class="card">
-			<a href="restaurants.html" class="cardAction">
+			<a href="restaurantsUlm.html" class="cardAction">
 				<img class="card-img-top-index" src="resources/img/ulm2.jpg" alt="Ulm">
 				<div class="card-body">
 					<h3 class="card-title">Ulm</h3>
