--- a/s'wirtshaus.html
+++ b/s'wirtshaus.html
@@ -19,7 +19,7 @@
     <link href="resources/css/bootstrap.css.map" rel="stylesheet">
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
     <link href="resources/css/stylesheet01.css" rel="stylesheet">
-    <link href="/resto/login/loginStyle.css" rel="stylesheet">
+    <link href="/resources/css/loginStyle.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -42,7 +42,7 @@
 			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
 				<ul class="navbar-nav ml-auto flex-nowrap">
 					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
+					<li class="nav-item"><a href="restaurantsFN.html" class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
@@ -82,10 +82,6 @@
             <p>Reservieren Sie Ihren Tisch bei s'Wirtshaus am See in Friedrichshafen - gleich
                 hier!</p>
         </div>
-        <p>
-            <a class="button" href="#" role="button" id="button01">Speisekarte
-                >></a>
-        </p>
     </div>
     <div class="container">
         <div class="row">
@@ -149,7 +145,7 @@
 			<span>Restaurando</span>
 		</h3>
 		<p class="footer-links">
-			<a href="index.html" class="link-1">Home</a> <a href="restaurants.html">Restaurants</a> <a
+			<a href="index.html" class="link-1">Home</a> <a href="restaurantsFN.html">Restaurants</a> <a
 				href="contact.html">Kontakt</a>
 		</p>
 		<p class="footer-company-name">Restaurando © 2019</p>
