--- a/bellavista.html
+++ b/bellavista.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
-    <title>Asia World</title>
+    <title>Bella Vista</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet"
@@ -76,10 +76,10 @@
 			</form>
         </div>
         
-    <div class="jumbotron text-center" id="jumbotronasiaworld">
+    <div class="jumbotron text-center" id="jumbotronbellavista">
         <div id="titletext">
-            <h1>Asia World</h1>
-            <p>Reservieren Sie Ihren Tisch bei Asia World Friedrichshafen - gleich
+            <h1>Bella Vista</h1>
+            <p>Reservieren Sie Ihren Tisch bei Bella Vista Friedrichshafen - gleich
                 hier!</p>
         </div>
     </div>
@@ -87,91 +87,52 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>Kategorien</h3>
-                <p>Chinesisch, Mongolisch, Japanisch</p>
+                <p>Pizza, Pasta, italienisch</p>
             </div>
             <div class="col-sm-4">
                 <h3>Was?</h3>
-                <p>Großes asiatisches Buffetrestaurant in zwangloser Atmosphäre mit Schaukochen und Sushi-Fließband.</p>
+                <p>Modernes italienisches Lokal mit klassischen rot-weiß-karierten Tischdecken und Seeblick von der Terrasse.</p>
             </div>
             <div class="col-sm-4">
                 <h3>Wo?</h3>
-                <p>Adelheidstraße 36</p>
-                <p>88046 Friedrichshafen</p>
+                <p>Seestraße 12</p>
+                <p>88045 Friedrichshafen</p>
             </div>
         </div>
     </div>
     <div class="container" id="reserve">
         <form action="/backend/addreservation.php" method="POST">
-            <h2 align="center">Reservierung bei Asia World Friedrichshafen</h2>
-            <input name="restaurant" hidden value="Asia World">
+            <h2 align="center">Reservierung bei Bella Vista </h2>
+            <input name="restaurant" hidden value="Bella Vista">
             <div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Datum auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/calendar.png">
-						<input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required name="dateinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<h3>Uhrzeit auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/clock.png">
-						<input class="reservation" type="time" id="time" min="09:00" max="23:00" required name="timeinput">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Anzahl Personen auswählen:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="amount" required name="amountinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<br>
-						<h3>Name:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="name" required name="nameinput">
-					</div>
-				</div>
-				<p>
-					<p align="center">
-						<button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
-							absenden</button>
-					</p>
-			</form>
-		</div>
-	</header>
+                <div class="col-sm-4" align="center">
+                    <h3>Datum auswählen:</h3>
+                    <img src="https://img.icons8.com/metro/26/000000/calendar.png">
+                    <input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required name="dateinput">
+                </div>
+                <div class="col-sm-4" align="center">
+                    <h3>Uhrzeit auswählen:</h3>
+                    <img src="https://img.icons8.com/metro/26/000000/clock.png">
+                    <input class="reservation" type="time" id="time" min="09:00" max="23:00" required name="timeinput">
+                </div>
+                <div class="col-sm-4" align="center">
+                    <h3>Anzahl Personen auswählen:</h3>
+                    <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                    <input class="reservation" type="text" id="amount" required name="amountinput">
+                </div>
+                <div class="col-sm-4" align="center">
+                    <h3>Name:</h3>
+                    <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                    <input class="reservation" type="text" id="name" required name="nameinput">
+                </div>
+            </div>
+            <p>
+            <p align="center">
+                <button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
+                    absenden</button>
+            </p>
+        </form>
+    </div>
+</header>
 </body>
-<footer class="footer-distributed">
-	<div class="footer-left">
-		<h3>
-			<span>Restaurando</span>
-		</h3>
-		<p class="footer-links">
-			<a href="index.html" class="link-1">Home</a> <a href="restaurantsFN.html">Restaurants</a> <a
-				href="contact.html">Kontakt</a>
-		</p>
-		<p class="footer-company-name">Restaurando © 2019</p>
-	</div>
-	<div class="footer-center">
-		<div>
-			<i class="fa fa-map-marker"></i>
-			<p>
-				<span>Georgstraße 13</span> Ravensburg, Deutschland
-			</p>
-		</div>
-		<div>
-			<i class="fa fa-phone"></i>
-			<p>+49 1575 444444</p>
-		</div>
-		<div>
-			<i class="fa fa-envelope"></i>
-			<p>
-				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
-			</p>
-		</div>
-	</div>
-	<div class="footer-right">
-		<p class="footer-company-about">
-			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
-		</p>
-	</div>
-</footer>
-
 </html>
